--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ##############################
-## README for EMSAR v1.2j    ##
+## README for EMSAR v2.0.0    ##
 ##############################
 
 ## Inquiries can be written to Soo Lee (duplexa@gmail.com).
